--- a/style.css
+++ b/style.css
@@ -41,3 +41,18 @@ nav a {
 h2{
     color: #7851a9;
 }
+
+.imgp{
+    max-width: 100%;
+}
+
+a.page-link{
+    color: #7851a9;
+}
+
+.footer1 {
+    position: fixed;
+    height: 200px;
+    bottom: 0;
+    width: 100%;
+}
