--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ h2{
     color: #7851a9;
 }
 
+.text1{
+    color: #7851a9;
+}
+
+.text2{
+    color: #fff;
+}
+
 .imgp{
     max-width: 100%;
 }
@@ -52,7 +60,48 @@ a.page-link{
 
 .footer1 {
     position: fixed;
-    height: 200px;
+    /* height: 200px; */
     bottom: 0;
     width: 100%;
+}
+.content {
+    min-height: 595px;
+}
+@media (max-width: 500px) {
+    .table-sm-responsive {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+    }
+}
+
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
